@@ -86,8 +86,9 @@ version ? (????-??-??):
   - use more <label> elements instead of javascript's checkElement() [alec]
   - fixed issue with too big session data on mysql [alec]
   - new contact add and new mac add ported to javascript [chilan]
-  - BTS#00000908: added function format_bankaccount [wdjag/chilan]
+  - BTS#0000908: added function format_bankaccount [wdjag/chilan]
   - added support for domain mx backup [chilan]
+  - BTS#0000911: msie support for javascript used for new mac/contact add [prezes_kk/chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
